Using clearfix to fix the overflow

--- a/main.css
+++ b/main.css
@@ -25,13 +25,15 @@ body {
 }
 
 #listOfBooks > li {  
+  position: static;  
   display: inline-block;
   padding: 0.5em;  
   margin: 0.5em;
   width: 19em;
   height: 25em;
   border: double;
-  word-wrap: break-word;
+  word-wrap: break-word;  
+  overflow: auto;
 }
 
 #listOfBooks > li:hover {  
@@ -47,7 +49,6 @@ body {
 }
 
 img {
-  /*float: left;*/
   margin-right: 0.2em;
 }
 button {
